# fastapi-pg-template

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  main.py  makefile  pyproject.toml  readme.md  requirements.docker.txt  requirements.txt  system.py  yoyo.example.ini  yoyo.ini
api/acc/: router.py
api/entity/: router.py
api/entity/models/: entity.py
api_models/: acc_to_pay.py  entity.py
app/: exceptions.py
app/acc/: __init__.py  router.py  service.py
app/acc/models/: acc.py
app/auth/: models.py  router.py  services.py
app/entity/: __init__.py  router.py
app/users/: models.py  router.py  services.py
database/: __init__.py  connection.py
database/migrations/: 20250506_01_aaBKK-initial-migration.rollback.sql  20250506_01_aaBKK-initial-migration.sql
database/models/: __init__.py
database/models/base/: __init__.py  refresh.py  user.py
database/models/financial/: acc_payable.py  entity.py
database/operations/: __init__.py  interface.py
database/operations/base/: __init__.py  refresh.py  user.py
docs/: acc_to_pay.rst  conf.py  modules.rst
docs/_build/doctrees/: acc_to_pay.doctree  connection.doctree  entity.doctree  environment.pickle  index.doctree  main.doctree  modules.doctree  system.doctree
log/: config.py
migrations/: env.py
migrations/versions/: 3bf0911a76c6_add_initial_tables.py  4982ce759014_add_initial_tables.py
tests/: test_acc_route.py  test_database.py  test_main.py
utils/: env_vars.py  project_dir.py
(+17 files in other folders)
