[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.115.12",
    "passlib>=1.7.4",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pyjwt>=2.11.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "uvicorn>=0.34.2",
    "yoyo-migrations>=9.0.0",
]
